<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:drawer_navi="http://schemas.android.com/apk/res-auto" >

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_action_search"
        android:orderInCategory="96"
        drawer_navi:showAsAction="always"
        android:title="@string/search"/>
    <item
        android:id="@+id/action_1"
        android:orderInCategory="97"
        drawer_navi:showAsAction="ifRoom"
        android:title="@string/action_1"/>
    <item
        android:id="@+id/action_2"
        android:orderInCategory="98"
        drawer_navi:showAsAction="ifRoom"
        android:title="@string/action_2"/>
    <item
        android:id="@+id/action_3"
        android:orderInCategory="99"
        drawer_navi:showAsAction="ifRoom"
        android:title="@string/action_3"/>
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        drawer_navi:showAsAction="ifRoom"
        android:title="@string/action_settings"/>

</menu>